finally got z-indexing for img hovering... need to fix boxshadow or find other solution for border

--- a/photography/src/App.css
+++ b/photography/src/App.css
@@ -1,5 +1,7 @@
 html, body {
-  height: 100vh;
+  position: absolute;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 
